# clips-contract

./: METADATA_MODULE_SUMMARY.md  STORAGE_ARCHITECTURE.md
clips_nft/: Cargo.toml
clips_nft/src/: clip_info_metadata.rs  collection_info.rs  collection_metadata.rs  config.rs  event_counter_storage.rs  lib.rs  metadata.rs  metadata_config.rs  metadata_repository.rs  metadata_timestamps.rs  metadata_uri_builder.rs  metadata_version.rs  mint_event.rs  mint_validator.rs  platform_recipient.rs  royalty_validator.rs  social_platform.rs  storage_cleanup.rs  storage_guard.rs  storage_serializer.rs  storage_validator.rs  token_metadata_storage.rs  token_storage.rs  types.rs  video_reference.rs  virality_score.rs
clips_nft/src/metadata/: ARCHITECTURE.md  CHANGELOG.md  QUICK_REFERENCE.md  README.md  helpers.rs  mod.rs  storage.rs  tests.rs  types.rs  validation.rs
clips_nft/src/storage/: config.rs  errors.rs  mod.rs
clips_nft/src/tests/: event_counter_tests.rs  mod.rs  storage_benchmark_tests.rs  storage_cleanup_tests.rs  storage_error_tests.rs
clips_nft/tests/: backend_simulation.rs  config_features.rs  test_metadata_fields.rs
